# upload_files_to_s3

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
