[package]
name = "upload_files_to_s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.6.0"
aws-sdk-s3 = "1.79.0"
tokio = { version = "1.44.0", features = ["full"] }
glob = "0.3.0"
dotenv = "0.15.0"
serde_json = "1.0.140"